--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^4.4.0
   cloud_firestore: ^4.5.0
   animated_splash_screen: ^1.3.0
+  form_field_validator: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
